--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.3.0",
+    "hugeicons-react": "^0.3.0",
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
+    "react-redux": "^9.1.2",
     "web": "file:"
   },
   "devDependencies": {
