--- a/package.json
+++ b/package.json
@@ -18,12 +18,12 @@
     "web": "file:"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
+    "@types/node": "20.17.3",
+    "@types/react": "18.3.12",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.13",
-    "typescript": "^5"
+    "typescript": "5.6.3"
   }
 }
