--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/modal": "^2.0.41",
+    "@nextui-org/system": "^2.2.6",
+    "@nextui-org/theme": "^2.2.11",
     "@reduxjs/toolkit": "^2.3.0",
+    "framer-motion": "^11.11.17",
     "hugeicons-react": "^0.3.0",
     "next": "14.2.13",
     "react": "^18",
