--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   },
   "dependencies": {
     "@nextui-org/date-picker": "^2.1.8",
+    "@nextui-org/input": "^2.4.7",
     "@nextui-org/modal": "^2.0.41",
     "@nextui-org/spinner": "^2.2.4",
-    "@nextui-org/system": "^2.2.6",
-    "@nextui-org/theme": "^2.2.11",
+    "@nextui-org/system": "^2.4.5",
+    "@nextui-org/theme": "^2.4.4",
     "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.7.7",
     "framer-motion": "^11.11.17",
