--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.7.7",
     "framer-motion": "^11.11.17",
     "hugeicons-react": "^0.3.0",
+    "lodash.debounce": "^4.0.8",
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
