--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nextui-org/spinner": "^2.2.4",
     "@nextui-org/system": "^2.4.5",
     "@nextui-org/theme": "^2.4.4",
+    "@nextui-org/tooltip": "^2.2.6",
     "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.7.7",
     "framer-motion": "^11.11.17",
